# micro_rts

./: CMakeLists.txt  README.md  STRUKTURA.md
assets/: map.txt  map1.txt  map2.txt  map3.txt
src/: building.c  building.h  bullet.c  bullet.h  collider.c  collider.h  colors.h  coord_utils.c  coord_utils.h  enemy.c  enemy.h  game.c  game.h  gamestate.c  gamestate.h  gamestate_forward.h  group_dest_resolver_test.py  health.c  health.h  health_bars.c  health_bars.h  keyboard.c  keyboard.h  laser_turret.c  laser_turret.h  main.c  mouse.c  mouse.h  selection_ui.c  selection_ui.h  sprite.c  sprite.h  tints.c  tints.h  unit.c  unit.h  vector.c  vector.h
